panel/1.0/upgrade/1.0.md
# Upgrading 1.0 Series
This documentation covers the process for upgrading within the `1.0.X` series of releases. This means upgrading from
&mdash; for example &mdash; `1.0.0-alpha.1` to `1.0.0-rc.7`. **Do not use this guide for upgrading from `0.7`.**

::: danger
Seriously, **stop** and read this warning. **Do not use this guide to upgrade from the 0.7 series.** You _will_
break your panel, and you _will_ lose access to your servers.
:::

## Update Dependencies
You'll need to make sure your system dependencies are up to date before performing this upgrade. Please
reference the list below to ensure you have all of the required versions.

* PHP `7.3+` (`7.4` recommended) with the following extensions: `cli`, `openssl`, `gd`, `mysql`, `PDO`, `mbstring`, `tokenizer`, `bcmath`, `xml` or `dom`, `curl`, `zip`, and `fpm` if you are planning to use nginx
* MySQL `5.7.22` or higher (MySQL `8` recommended) **or** MariaDB `10.2` or higher.

::: warning Seriously, Double Check your Database Version
Please make sure you are running the correct version of MariaDB or MySQL listed above! Failure to do so _will_
result in an error when you attempt to run the migrations.

Previous documentation (and just the age of this software) likely had you installing MariaDB 10.1 which _will not
work_ with this version of Pterodactyl.
:::

## Fetch Updated Files
The first step in the update process is to download the new panel files from GitHub. The command below will download
the release archive for the most recent version of Pterodactyl and save it in the current directory. Now is a good time
to ensure that you're in the `/var/www/pterodactyl` directory as the command below will automatically unpack the archive
into your current folder.

``` bash
curl -L https://github.com/pterodactyl/panel/releases/download/v1.0.0/panel.tar.gz | tar -xzv
```

Once all of the files are downloaded we need to set the correct permissions on the cache and storage directories to avoid
any webserver related errors.

``` bash
chmod -R 755 storage/* bootstrap/cache
```

## Update Dependencies
After you've downloaded all of the new files you will need to upgrade the core components of the panel. To do this,
simply run the commands below and follow any prompts.

``` bash
composer install --no-dev --optimize-autoloader
```

## Clear Compiled Template Cache
You'll also want to clear the compiled template cache to ensure that new and modified templates show up correctly for
users.

``` bash
php artisan view:clear
php artisan config:clear
```

## Database Updates
You'll also need to update your database schema for the newest version of Pterodactyl. Running the two commands below
will update the schema and ensure the default eggs we ship are up to date (and add any new ones we might have). Just
remember, _never edit core eggs we ship_! They will be overwritten by this update process.
``` bash
php artisan migrate --force
php artisan db:seed --force
```

## Set Permissions
The last step is to set the proper owner of the files to be the user that runs your webserver. In most cases this
is `www-data` but can vary from system to system &mdash; sometimes being `nginx`, `apache`, or even `nobody`.

``` bash
# If using NGINX or Apache (not on CentOS):
chown -R www-data:www-data * 

# If using NGINX on CentOS:
chown -R nginx:nginx *

# If using Apache on CentOS
chown -R apache:apache *
```
